Re-introduced project as optional query parameter
